# NormativesDB

./: CMakeLists.txt  Doxyfile  README.md  data.bin.enc  db.txt
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  classes.html  crypto__utils_8cpp.html  crypto__utils_8cpp__incl.map  crypto__utils_8cpp__incl.md5  crypto__utils_8cpp_a016d5dccebf13f0174419222835f5f80_icgraph.map  crypto__utils_8cpp_a2c1450c0c81741af5ed7ae240e7eef80_icgraph.map  crypto__utils_8h.html  crypto__utils_8h__dep__incl.map  crypto__utils_8h__dep__incl.md5  crypto__utils_8h__incl.map  crypto__utils_8h__incl.md5  crypto__utils_8h_a016d5dccebf13f0174419222835f5f80_icgraph.md5  crypto__utils_8h_a2c1450c0c81741af5ed7ae240e7eef80_icgraph.md5  crypto__utils_8h_source.html  dir_000006_000005.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_007ad4948e580287e9d3cd339e78f152_dep.md5  dir_08cec4c655d37361da453b6dde918433.html  dir_08cec4c655d37361da453b6dde918433_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_860c11998a3807e839f8c74cce4c2bd1.html  dir_860c11998a3807e839f8c74cce4c2bd1_dep.md5  dir_95e29a8b8ee7c54052c171a88bb95675.html  doxygen_crawl.html  (+157 more)
include/: crypto_utils.h  file_operations.h  normative.h  student.h  student_manager.h  txt_importer.h  validation.h
src/: crypto_utils.cpp  file_operations.cpp  main.cpp  student.cpp  student_manager.cpp  txt_importer.cpp  validation.cpp
Блок схемы/: add_student_diagram  edit_student_diagram  import_txt_diagram  main_diagram  other_functions_diagram
(+139 files in other folders)
